CS_SBOX_20150209_01/Metadata/unpackaged/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AVA_SFCORE__Mailing_Last_Validated__c</fullName>
        <label>Last Validated</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Other_Last_Validated__c</fullName>
        <label>Last Validated</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Areas_of_Interest__c</fullName>
        <description>Created by LM on 9/27/2013 for Phase 2 rollout</description>
        <label>Areas of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Blog_Address__c</fullName>
        <description>Created by LM on 9/5/2013 for Phase 2 rollout</description>
        <label>Blog Address</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Bounceback__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 8/27/2013 for Phase 2 rollout</description>
        <label>Bounceback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Contact_ID__c</fullName>
        <description>Created by LM on 12/7/13 for Phase2</description>
        <label>CRM Contact ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Department__c</fullName>
        <description>Created by LM on 9/27/2013 for Phase 2 rollout</description>
        <label>Function/Department</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting/Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundraising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investor Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR/Corporate Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GA_Campaign__c</fullName>
        <description>Google Analytic Campaign</description>
        <inlineHelpText>Google Analytic Campaign</inlineHelpText>
        <label>GA Campaign</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Content__c</fullName>
        <description>Google Analytic Content</description>
        <inlineHelpText>Google Analytic Content</inlineHelpText>
        <label>GA Content</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GA_Medium__c</fullName>
        <description>Google Analytic Medium</description>
        <inlineHelpText>Google Analytic Medium</inlineHelpText>
        <label>GA Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Source__c</fullName>
        <description>Google Analytic Source</description>
        <inlineHelpText>Google Analytic Source</inlineHelpText>
        <label>GA Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Term__c</fullName>
        <description>Google Analytic Term</description>
        <inlineHelpText>Google Analytic Term</inlineHelpText>
        <label>GA Term</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Role__c</fullName>
        <description>Added by LM on 2/11/2013; From MS CRM</description>
        <label>Job Role</label>
        <picklist>
            <picklistValues>
                <fullName>Account Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant/Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freelancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Journalist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner/Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professor/Dean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vice President</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <description>Created by LM on 10/21/2013 for Phase 2 rollout</description>
        <label>Lead Score</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Most_Recent__c</fullName>
        <description>Created by LM on 11/20/2013 for Phase 2 rollout</description>
        <label>Lead Source – Most Recent</label>
        <picklist>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <description>Created by LM on 9/5/2013 for Phase 2 rollout</description>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Other_Email_Address__c</fullName>
        <description>Added by LM on 5/13/2014 for Phase2; requested by Ari Shapiro.</description>
        <label>Other Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PR_Activities__c</fullName>
        <description>Created by LM on 9/27/2013 for Phase 2 rollout</description>
        <label>PR Activities</label>
        <picklist>
            <picklistValues>
                <fullName>Use Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Free Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Cision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nothing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PR_Department_Size__c</fullName>
        <description>Created by LM on 9/27/2013 for Phase 2 rollout</description>
        <label>PR Department Size</label>
        <picklist>
            <picklistValues>
                <fullName>There is a whole bunch of us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>There are a few of us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>It&apos;s just me</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>There is no PR department</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role_in_the_Sales_Process__c</fullName>
        <description>Added by LM on 3/15/2013; From MS CRM</description>
        <label>Role in the Sales Process</label>
        <picklist>
            <picklistValues>
                <fullName>Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Champion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signer of Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Super User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Last_Touched_On__c</fullName>
        <description>Added by LM on 2/11/2013; From MS CRM</description>
        <label>Sales Last Touched On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ShowID__c</fullName>
        <formula>AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ShowID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Still_Insane__c</fullName>
        <label>Still Insane</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>This_is_insane__c</fullName>
        <label>This is insane</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter_Handle__c</fullName>
        <description>Created by LM on 9/5/2013 for Phase 2 rollout</description>
        <label>Twitter Handle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Employees__c</fullName>
        <description>Created by LM on 9/27/2013 for Phase 2 rollout</description>
        <label>Web Employees</label>
        <picklist>
            <picklistValues>
                <fullName>Small Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fewer than 1,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 1,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_Lead_Comments__c</fullName>
        <label>Web Lead Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Web_Revenue__c</fullName>
        <description>Created by LM on 9/27/2013 for Phase 2 rollout</description>
        <label>Web Revenue</label>
        <picklist>
            <picklistValues>
                <fullName>Small Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than $150 Million</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater than $150 Million</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fw1__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rrpu__Alert_Message__c</fullName>
        <description>This field is installed by Riptide Pop-up Alerts and is used in conjunction with the Pop-up Alert S-Control.</description>
        <inlineHelpText>If you enter text into this field the text will be displayed in a pop-up message whenever someone views this record.</inlineHelpText>
        <label>Alert Message</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Phone_Number_or_Email_Required</fullName>
        <active>true</active>
        <description>Either a Phone Number or an Email Address is Required to save a Contact.</description>
        <errorConditionFormula>AND(ISBLANK(Email)=TRUE,
ISBLANK(Phone)=TRUE)</errorConditionFormula>
        <errorMessage>You must provide a Phone Number or an Email Address on a Contact in order to Save it.</errorMessage>
    </validationRules>
</CustomObject>